Changes to Adopt to Java17